# mcp-agent

./: README.md  main.py  pyproject.toml  requirements.txt
src/jupyter/: notebook.ipynb  scraper_agent.ipynb
src/python/agents/: analyst_agent.py  search_agent.py
src/python/tools/: craw4ai.py  webscraper.py
