[project]
name = "stock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "crawl4ai>=0.6.2",
    "duckduckgo-search>=8.0.1",
    "google-adk>=0.4.0",
    "google-genai>=1.13.0",
    "ipykernel>=6.29.5",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
]
